--- a/project/public/css/common.css
+++ b/project/public/css/common.css
@@ -1,63 +1,67 @@
-.sec_wrap{
-    width:100%;
+.sec_wrap {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
-.sec_wrap>div{
-    width:50%;
-    height:100vh;
+.sec_wrap > div {
+    width: 50%;
+    height: 100vh;
 }
 /* =========padding */
-.p50all{
-    padding:50px;
+.p50all {
+    padding: 50px;
     box-sizing: border-box;
 }
 /* ======font */
-h1{
+h1 {
     font-size: 60px;
     letter-spacing: 0.1em;
 }
-h2{
-    font-size: 35px;
+h2 {
+    font-size: 45px;
     letter-spacing: 0.1em;
 }
-p{
+h3 {
+    font-size: 30px;
+    letter-spacing: 0.1em;
+}
+p {
     font-size: 25px;
 }
 /* ==========color */
-.blue{
-    color: #4885F5;
+.blue {
+    color: #4885f5;
 }
-.b_blue{
-    background-color: #4885F5;
+.b_blue {
+    background-color: #4885f5;
 }
-.black{
-    color:#202124;
+.black {
+    color: #202124;
 }
-.b_black{
-    background-color:#202124;
+.b_black {
+    background-color: #202124;
 }
-.beige{
-    color:#F3EDE4;
+.beige {
+    color: #f3ede4;
 }
-.b_beige{
-    background-color:#F3EDE4;
+.b_beige {
+    background-color: #f3ede4;
 }
-.yellow{
-    color:#FCCB65;
+.yellow {
+    color: #fccb65;
 }
-.b_yellow{
-    background-color: #FCCB65;
+.b_yellow {
+    background-color: #fccb65;
 }
-.red{
-    color: #F57447;
+.red {
+    color: #f57447;
 }
-.b_red{
-    background-color: #F57447;
+.b_red {
+    background-color: #f57447;
 }
-.green{
-    color:#8DCEB1;
+.green {
+    color: #8dceb1;
 }
-.b_green{
-    background-color:#8DCEB1;
+.b_green {
+    background-color: #8dceb1;
 }
