--- a/project/public/css/common.css
+++ b/project/public/css/common.css
@@ -13,6 +13,10 @@
     box-sizing: border-box;
 }
 /* ======font */
+.kr {
+    font-family: "Nanum Gothic";
+    font-weight: 600;
+}
 h1 {
     font-size: 60px;
     letter-spacing: 0.1em;
@@ -26,7 +30,8 @@ h3 {
     letter-spacing: 0.1em;
 }
 p {
-    font-size: 25px;
+    font-size: 24px;
+    line-height: 1.5;
 }
 /* ==========color */
 .blue {
@@ -64,4 +69,35 @@ p {
 }
 .b_green {
     background-color: #8dceb1;
+}
+@media (max-width: 834px) {
+    .sec_wrap {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .sec_wrap > div {
+        width: 100%;
+        height: 100vh;
+    }
+    .p50all {
+        padding: 40px;
+    }
+    /* font======= */
+    h1 {
+        font-size: 45px;
+        letter-spacing: 0.1em;
+    }
+    h2 {
+        font-size: 30px;
+        letter-spacing: 0.1em;
+    }
+    h3 {
+        font-size: 24px;
+        letter-spacing: 0.1em;
+    }
+    p {
+        font-size: 20px;
+        line-height: 1.5;
+    }
 }
