--- a/project/public/css/reset.css
+++ b/project/public/css/reset.css
@@ -5,6 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Noto+Sans+KR:wght@300;400;500;700&family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://webfontworld.github.io/gmarket/GmarketSans.css");
 @import url("https://fonts.cdnfonts.com/css/gill-sans?styles=17575,17577,17570");
+@import url("https://fonts.googleapis.com/earlyaccess/nanumgothic.css");
 html,
 body,
 div,
