--- a/project/public/css/common.css
+++ b/project/public/css/common.css
@@ -33,6 +33,9 @@ p {
     font-size: 24px;
     line-height: 1.5;
 }
+.bold {
+    font-weight: 900;
+}
 /* ==========color */
 .blue {
     color: #4885f5;
