--- a/project/public/css/common.css
+++ b/project/public/css/common.css
@@ -14,8 +14,8 @@
 }
 /* ======font */
 .kr {
-    font-family: "Nanum Gothic";
-    font-weight: 600;
+    font-family: "NanumSquare", san-serif;
+    font-weight: 700;
 }
 h1 {
     font-size: 60px;
@@ -29,8 +29,12 @@ h3 {
     font-size: 30px;
     letter-spacing: 0.1em;
 }
+h4 {
+    font-size: 26px;
+    letter-spacing: 0.1em;
+}
 p {
-    font-size: 24px;
+    font-size: 22px;
     line-height: 1.5;
 }
 .bold {
