--- a/project/public/css/m_common.css
+++ b/project/public/css/m_common.css
@@ -25,7 +25,6 @@
 }
 .content p {
     font-size: 16px;
-    font-weight: normal;
 }
 .content h3 {
     padding: 60px 0 20px;
@@ -111,4 +110,8 @@
 }
 .apple {
     color: #ee4b3c;
+}
+/* =========== */
+.content .list p {
+    line-height: 1.8;
 }
