--- a/project/public/css/common.css
+++ b/project/public/css/common.css
@@ -12,6 +12,10 @@
     padding: 50px;
     box-sizing: border-box;
 }
+.p25 {
+    padding: 0 25px 0 25px;
+    box-sizing: border-box;
+}
 /* ======font */
 .kr {
     font-family: "NanumSquare", san-serif;
@@ -80,6 +84,34 @@ p {
 .b_green {
     background-color: #8dceb1;
 }
+@media (max-width: 1440px) {
+    /* =========padding */
+    .p50all {
+        padding: 30px;
+        box-sizing: border-box;
+    }
+    /* ======font */
+    h1 {
+        font-size: 52px;
+        letter-spacing: 0.1em;
+    }
+    h2 {
+        font-size: 38px;
+        letter-spacing: 0.1em;
+    }
+    h3 {
+        font-size: 28px;
+        letter-spacing: 0.1em;
+    }
+    h4 {
+        font-size: 24px;
+        letter-spacing: 0.1em;
+    }
+    p {
+        font-size: 20px;
+        line-height: 1.5;
+    }
+}
 @media (max-width: 834px) {
     .sec_wrap {
         width: 100%;
@@ -91,7 +123,7 @@ p {
         height: 100vh;
     }
     .p50all {
-        padding: 40px;
+        padding: 45px;
     }
     /* font======= */
     h1 {
