--- a/project/public/css/m_common.css
+++ b/project/public/css/m_common.css
@@ -23,12 +23,86 @@
 .section2 .left > div > img {
     width: 100%;
 }
+/* function======================= */
+.function .sec_wrap > div {
+    min-height: 100vh;
+    height: auto;
+}
+.function .left {
+    position: relative;
+}
+.function .img_wrap{
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100vh;
+}
+.function .img {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 50px;
+    width: calc(100% - 100px);
+}
+.img.fixed {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 50px;
+    width: calc(50% - 100px);
+}
+.function .img > div {
+    padding-top: 59.2569%;
+    width: 100%;
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+}
+.func1 {
+    background-color: aqua;
+}
+.func2 {
+    background-color: lightcoral;
+}
+.func3 {
+    background-color: lightgreen;
+}
+.func4 {
+    background-color: lightslategrey;
+}
+
+
+.function h2.fixed {
+    position:fixed;
+    padding:50px;
+    box-sizing: border-box;
+    width:50vw;
+    top:0;
+    left: 50%;
+    background-color: #f3f3f3;
+}
+.function .comple{
+    margin-top:20px;
+}
 .content p {
     font-size: 16px;
 }
 .content h3 {
     padding: 60px 0 20px;
     box-sizing: border-box;
+}
+.function .list{
+    min-height:50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 150px 0;
+}
+.function .list:last-child{
+    height:auto;
+    min-height: fit-content;
+
 }
 /* color============ */
 .b_gray {
@@ -111,7 +185,16 @@
 .apple {
     color: #ee4b3c;
 }
+.b_apple {
+    background-color: #ee4b3c;
+}
 /* =========== */
 .content .list p {
     line-height: 1.8;
+}
+@media (max-width:1440px) {
+    .function h2.fixed{
+        padding:30px;
+    }
+    
 }
