--- a/project/public/css/m_common.css
+++ b/project/public/css/m_common.css
@@ -31,12 +31,12 @@
 .function .left {
     position: relative;
 }
-.function .img_wrap{
+.function .img_wrap {
     position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
 }
 .function .img {
     position: absolute;
@@ -59,31 +59,18 @@
     background-position: center top;
     background-repeat: no-repeat;
 }
-.func1 {
-    background-color: aqua;
-}
-.func2 {
-    background-color: lightcoral;
-}
-.func3 {
-    background-color: lightgreen;
-}
-.func4 {
-    background-color: lightslategrey;
-}
-
 
 .function h2.fixed {
-    position:fixed;
-    padding:50px;
+    position: fixed;
+    padding: 50px;
     box-sizing: border-box;
-    width:50vw;
-    top:0;
+    width: 50vw;
+    top: 0;
     left: 50%;
     background-color: #f3f3f3;
 }
-.function .comple{
-    margin-top:20px;
+.function .comple {
+    margin-top: 20px;
 }
 .content p {
     font-size: 16px;
@@ -92,17 +79,16 @@
     padding: 60px 0 20px;
     box-sizing: border-box;
 }
-.function .list{
-    min-height:50vh;
+.function .list {
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 150px 0;
+    padding: 200px 0 100px;
 }
-.function .list:last-child{
-    height:auto;
+.function .list:last-child {
+    height: auto;
     min-height: fit-content;
-
 }
 /* color============ */
 .b_gray {
@@ -192,9 +178,8 @@
 .content .list p {
     line-height: 1.8;
 }
-@media (max-width:1440px) {
-    .function h2.fixed{
-        padding:30px;
+@media (max-width: 1440px) {
+    .function h2.fixed {
+        padding: 30px;
     }
-    
 }
